# shift-js

./: .gitignore  CMakeLists.txt  README.md  bench.sh  demo.sh  lsan_suppressions.txt
app/: index.ejs
app/_admin/: index.ejs
app/_admin/domains/: index.ejs
app/_admin/editor/: index.ejs
app/_admin/kv/: index.ejs
app/_admin/tenants/: index.ejs
app/_api/domains/: index.ejs
app/_api/kv/: index.ejs
app/_api/modules/: index.ejs
app/_api/replay/: index.mjs
app/_api/tenants/: index.ejs
app/domains/: index.ejs
app/tenants/: index.ejs
demo/: editor.js  index.tsx  kv-viewer.js  replay.js  requests.js  style.css
demo/_api/code/: index.ts
demo/_api/kv/: index.ts
demo/_api/logs/: index.ts
demo/editor/: index.tsx
demo/kv/: index.tsx
demo/logs/: index.tsx
demo/replay/: index.tsx
mcp/: index.js  package-lock.json  package.json
patches/: quickjs-stable-shape-hash.patch
src/: admin.c  admin.h  auth.c  auth.h  code_client.c  code_client.h  code_db.c  code_db.h  code_server.c  code_server.h  code_store.c  code_store.h  crypto.c  crypto.h  ctl.c  ctl.h  ejs.c  ejs.h  js_dispatch.c  js_globals.c  js_globals.h  js_runtime.c  js_runtime.h  kvstore.c  kvstore.h  log_db.c  log_db.h  log_forward.c  log_forward.h  main.c  preprocessor.c  preprocessor.h  qjs_snap.c  qjs_snap.h  raft_log.c  raft_log.h  raft_net.c  raft_net.h  raft_rpc.c  raft_rpc.h  (+12 more)
src/code_server/: code_db.c  code_db.h  compile.c  compile.h  http_api.c  http_api.h  main.c  push.c  push.h
src/log_server/: http_api.c  http_api.h  log_store.c  log_store.h  main.c
tools/: sjsctl.c
